# srcqe_analysis

./: .gitignore  CMakeLists.txt  README.md  run_g4e.py  run_plugin.py
florian_script/: g4e_analysis.cpp
srcqe_analysis/: CMakeLists.txt  README.md  SrcqeAnalysisProcessor.cc  SrcqeAnalysisProcessor.h  SrcqeRootOutput.h  srcqe_analysis.cc
srcqe_analysis/cmake/: FindEJANA.cmake  FindJANA.cmake
